--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "lint": "eslint . --ext .js,.ts,.vue --fix",
+    "lint": "eslint --fix",
     "format": "prettier --write src/",
     "prepare": "husky install"
   },
