--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "type-check": "vue-tsc --build",
     "lint": "eslint --fix",
     "format": "prettier --write src/",
-    "prepare": "husky install"
+    "prepare": "husky install",
+     "lint-staged": "lint-staged"
   },
   "dependencies": {
     "globals": "^16.3.0",
@@ -37,11 +38,17 @@
     "eslint-plugin-vue": "~10.3.0",
     "husky": "^8.0.0",
     "jiti": "^2.4.2",
+    "lint-staged": "^16.1.4",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
     "typescript": "~5.8.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
     "vue-tsc": "^3.0.4"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": [
+      "eslint --fix"
+    ]
   }
 }
