--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
     "prepare": "husky install",
-     "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
+    "axios": "^1.11.0",
+    "element-plus": "^2.10.6",
     "globals": "^16.3.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
@@ -38,10 +41,15 @@
     "eslint-plugin-vue": "~10.3.0",
     "husky": "^8.0.0",
     "jiti": "^2.4.2",
+    "less": "^4.4.0",
     "lint-staged": "^16.1.4",
     "npm-run-all2": "^8.0.4",
+    "pinia-plugin-persistedstate": "^4.4.1",
     "prettier": "3.6.2",
+    "sass": "^1.90.0",
     "typescript": "~5.8.0",
+    "unplugin-auto-import": "^20.0.0",
+    "unplugin-vue-components": "^29.0.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
     "vue-tsc": "^3.0.4"
