--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify-json/ep": "^1.2.3",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.16.5",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
@@ -49,6 +50,7 @@
     "sass": "^1.90.0",
     "typescript": "~5.8.0",
     "unplugin-auto-import": "^20.0.0",
+    "unplugin-icons": "^22.2.0",
     "unplugin-vue-components": "^29.0.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
