--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.11.0",
     "element-plus": "^2.10.6",
     "globals": "^16.3.0",
     "pinia": "^3.0.3",
+    "quill": "2.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
