--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"], //，如果自动导入在根组件加上auto-imports.d这个ts不会报错elm组件未导入
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue","auto-imports.d"], //，如果自动导入在根组件加上auto-imports.d这个ts不会报错elm组件未导入
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
